--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -31,7 +31,7 @@ monitor=DP-1, 1920x1080, 1920x0, 1
 # source = ~/.config/hypr/myColors.conf
 
 # Set programs that you use
-$terminal = konsole
+$terminal = terminator
 $fileManager = dolphin
 $menu = wofi --show drun
 
