--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -19,8 +19,9 @@ exec-once = nm-applet
 exec-once = hyprpm enable hyprscroller
 
 #Steam Deck monitor setup
-monitor=eDP-1,800x1280@60,640x0,1,transform,3
-monitor=DP-1, 1920x1080, 1920x0, 1
+#monitor=eDP-1,800x1280@60,640x0,1,transform,3
+#monitor=DP-1, 1920x1080, 1920x0, 1
+#My laptop is working again so I don't need this now.
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
