Fixed resolution on my laptop.

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -18,6 +18,7 @@ exec-once = /home/fearlessgeek/.config/autostart/autostart.sh
 exec-once = nm-applet
 exec-once = hyprpm enable hyprscroller
 
+monitor=eDP-1,1366x768,1366x0,1
 #Steam Deck monitor setup
 #monitor=eDP-1,800x1280@60,640x0,1,transform,3
 #monitor=DP-1, 1920x1080, 1920x0, 1
