Make kitty the terminal and edited the configuration for kitty to my liking.

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -33,7 +33,7 @@ monitor=eDP-1,1366x768,1366x0,1
 # source = ~/.config/hypr/myColors.conf
 
 # Set programs that you use
-$terminal = terminator
+$terminal = kitty
 $fileManager = dolphin
 $menu = wofi --show drun
 
