Switched back to Kitty for terminal, and switched to Oh My Posh for prompt.

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -33,7 +33,7 @@ monitor=eDP-1,1366x768@60,1366x0,1
 # source = ~/.config/hypr/myColors.conf
 
 # Set programs that you use
-$terminal = cool-retro-term
+$terminal = kitty
 $fileManager = dolphin
 $menu = wofi --show drun
 
