Made changes so I can use devour with Kitty in Hyprland. Needed for force Kitty to use XWAYLAND instead of native Wayland. I guess this means all GUI apps will be using XWAYLAND rather than Wayland when running from Kitty. Oh well

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -33,7 +33,7 @@ monitor=eDP-1,1366x768@60,1366x0,1
 # source = ~/.config/hypr/myColors.conf
 
 # Set programs that you use
-$terminal = kitty
+$terminal = ~/.local/bin/wayload kitty
 $fileManager = dolphin
 $menu = wofi --show drun
 
@@ -151,7 +151,7 @@ device {
 }
 
 # Example windowrule v1
-# windowrule = float, ^(kitty)$
+windowrule = tile, ^(kitty)$
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
