--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -18,11 +18,10 @@ exec-once = /home/fearlessgeek/.config/autostart/autostart.sh
 exec-once = nm-applet
 exec-once = hyprpm enable hyprscroller
 
-monitor=eDP-1,1366x768@60,1366x0,1
+#monitor=eDP-1,1366x768@60,1366x0,1
 #Steam Deck monitor setup
-#monitor=eDP-1,800x1280@60,640x0,1,transform,3
-#monitor=DP-1, 1920x1080, 1920x0, 1
-#My laptop is working again so I don't need this now.
+monitor=eDP-1,800x1280@60,640x0,1,transform,3
+monitor=DP-1, 1920x1080, 1920x0, 1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
