Borrowing a friend's laptop until I can get a new one. Put in my monitor configuration for Hyprland.

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -20,8 +20,11 @@ exec-once = hyprpm enable hyprscroller
 
 #monitor=eDP-1,1366x768@60,1366x0,1
 #Steam Deck monitor setup
-monitor=eDP-1,800x1280@60,640x0,1,transform,3
-monitor=DP-1, 1920x1080, 1920x0, 1
+#monitor=eDP-1,800x1280@60,640x0,1,transform,3
+#monitor=DP-1, 1920x1080, 1920x0, 1
+#I'm borrowing a friend's laptop right now so I don't need this. I need the following instead...
+
+monitor=eDP-1,1920x1080@60,1920x0,1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -32,7 +35,7 @@ monitor=DP-1, 1920x1080, 1920x0, 1
 # source = ~/.config/hypr/myColors.conf
 
 # Set programs that you use
-$terminal = ~/.local/bin/wayload kitty
+$terminal = kitty
 $fileManager = dolphin
 $menu = wofi --show drun
 
@@ -140,6 +143,8 @@ gestures {
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    enable_swallow = true
+    swallow_regex = ^(kitty)$
 }
 
 # Example per-device config
