Decided to go with Zellij every time kitty is opened.

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -166,8 +166,7 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Return, exec, $terminal
-bind = SUPERSHIFT, Return, exec, $terminal -e zellij
+bind = $mainMod, Return, exec, $terminal -e zellij
 bind = SUPERSHIFT, Q, killactive, 
 bind = $mainMod, X, exit, 
 bind = $mainMod, E, exec, $fileManager
