adjusted margin, padding, and wallpaper of Kitty terminal.

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,9 +7,9 @@
 #: characters.
 
 font_family      FiraCode Nerd Font Mono SemiBold
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -24,7 +24,7 @@ font_family      FiraCode Nerd Font Mono SemiBold
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-# font_size 11.0
+font_size 12.0
 
 #: Font size (in pts).
 
@@ -827,7 +827,7 @@ font_family      FiraCode Nerd Font Mono SemiBold
 #: that setting a non-zero window_margin_width overrides this and
 #: causes all borders to be drawn.
 
-# window_margin_width 0
+window_margin_width 3
 
 #: The window margin (in pts) (blank area outside the border). A
 #: single value sets all four sides. Two values set the vertical and
@@ -842,7 +842,7 @@ font_family      FiraCode Nerd Font Mono SemiBold
 #: set the vertical and horizontal sides. Three values set top,
 #: horizontal and bottom. Four values set top, right, bottom and left.
 
-# window_padding_width 0
+window_padding_width 3
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -1175,7 +1175,7 @@ font_family      FiraCode Nerd Font Mono SemiBold
 #: platform implements it, so use with care. Currently supported on
 #: macOS and KDE.
 
-background_image /home/fearlessgeek/wallpapers/punk-rock.png
+background_image /home/fearlessgeek/wallpapers/ska.png
 
 #: Path to a background image. Must be in PNG format.
 
@@ -1213,7 +1213,7 @@ background_tint 0.98
 #: multiplicative with background_tint, it can be used to lighten the
 #: tint over the window gaps for a *separated* look.
 
-# dim_opacity 0.4
+dim_opacity 1
 
 #: How much to dim text that has the DIM/FAINT attribute set. One
 #: means no dimming and zero means fully dimmed (i.e. invisible).
@@ -1235,43 +1235,43 @@ background_tint 0.98
 #: dull and bright version, for the first 16 colors. You can set the
 #: remaining 240 colors as color16 to color255.
 
-# color0 #000000
-# color8 #767676
+color0 #948784
+color8 #767676
 
 #: black
 
-# color1 #cc0403
-# color9 #f2201f
+color1 #cc0403
+color9 #f2201f
 
 #: red
 
-# color2  #19cb00
-# color10 #23fd00
+color2  #19cb00
+color10 #23fd00
 
 #: green
 
-# color3  #cecb00
-# color11 #fffd00
+color3  #cecb00
+color11 #fffd00
 
 #: yellow
 
-# color4  #0d73cc
-# color12 #1a8fff
+color4  #0d73cc
+color12 #1a8fff
 
 #: blue
 
-# color5  #cb1ed1
-# color13 #fd28ff
+color5  #cb1ed1
+color13 #fd28ff
 
 #: magenta
 
-# color6  #0dcdcd
-# color14 #14ffff
+color6  #0dcdcd
+color14 #14ffff
 
 #: cyan
 
-# color7  #dddddd
-# color15 #ffffff
+color7  #dddddd
+color15 #ffffff
 
 #: white
 
