--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -142,7 +142,7 @@ gestures {
 
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
     enable_swallow = true
     swallow_regex = ^(kitty)$
 }
@@ -174,6 +174,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, Space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, F, fullscreen,
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
