Fixed shortcut keys for moving Windows in Hyprland, and made some changes to Kitty's configuration with opacity.

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1139,7 +1139,7 @@ window_padding_width 3
 
 #: The foreground and background colors.
 
-# background_opacity 1.0
+background_opacity 0.6
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -1163,7 +1163,7 @@ window_padding_width 3
 #: this option when reloading the config will only work if
 #: dynamic_background_opacity was enabled in the original config.
 
-# background_blur 0
+background_blur 3
 
 #: Set to a positive value to enable background blur (blurring of the
 #: visuals behind a transparent window) on platforms that support it.
@@ -1191,14 +1191,14 @@ background_image_layout cscaled
 #: When background image is scaled, whether linear interpolation
 #: should be used.
 
-# dynamic_background_opacity yes
+dynamic_background_opacity yes
 
 #: Allow changing of the background_opacity dynamically, using either
 #: keyboard shortcuts (increase_background_opacity and
 #: decrease_background_opacity) or the remote control facility.
 #: Changing this option by reloading the config is not supported.
 
-background_tint 0.98
+background_tint 0.68
 
 #: How much to tint the background image by the background color. This
 #: option makes it easier to read the text. Tinting is done using the
