--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -219,10 +219,10 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 #Move windows with keyboard
-bind = SUPERSHIFT, H, movewindow, l
-bind = SUPERSHIFT, L, movewindow, r
-bind = SUPERSHIFT, K, movewindow, u
-bind = SUPERSHIFT, J, movewindow, d
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, K, movewindow, u
+bind = $mainMod SHIFT, J, movewindow, d
 
 # Hyprscroller
 
@@ -235,12 +235,12 @@ bind = $mainMod, home, scroller:movefocus, begin
 bind = $mainMod, end, scroller:movefocus, end
 
 # Movement
-bind = $mainMod CTRL, H, scroller:movewindow, l
-bind = $mainMod CTRL, L, scroller:movewindow, r
-bind = $mainMod CTRL, K, scroller:movewindow, u
-bind = $mainMod CTRL, J, scroller:movewindow, d
-bind = $mainMod CTRL, home, scroller:movewindow, begin
-bind = $mainMod CTRL, end, scroller:movewindow, end
+bind = $mainMod SHIFT, H, scroller:movewindow, l
+bind = $mainMod SHIFT, L, scroller:movewindow, r
+bind = $mainMod SHIFT, K, scroller:movewindow, u
+bind = $mainMod SHIFT, J, scroller:movewindow, d
+bind = $mainMod SHIFT, home, scroller:movewindow, begin
+bind = $mainMod SHIFT, end, scroller:movewindow, end
 
 # Modes
 bind = $mainMod, bracketleft, scroller:setmode, row
