Waybar wasn't loading at startup. Fixed that.

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -17,6 +17,7 @@
 exec-once = /home/fearlessgeek/.config/autostart/autostart.sh
 exec-once = nm-applet
 exec-once = hyprpm enable hyprscroller
+exec-once = waybar
 
 #monitor=eDP-1,1366x768@60,1366x0,1
 #Steam Deck monitor setup
