Sometimes Waybar just doesn't load at startup for whatever reason, so I put a keybinding to start it in case it fails to load at startup.

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -176,6 +176,7 @@ bind = $mainMod, Space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen,
+bind = SUPERSHIFT, W, exec, waybar
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
